Implemented new specs
